Fixed layout bugs

--- a/css/global.css
+++ b/css/global.css
@@ -385,6 +385,7 @@ html {
   grid-column: 1/3;
   height: calc(var(--key-size) * 3);
   display: flex;
+  gap: var(--key-size);
   align-items: center;
 }
 .tf_layout-aside {
