--- a/less/_layout.less
+++ b/less/_layout.less
@@ -9,6 +9,7 @@
         grid-column: 1/3;
         height: calc(var(--key-size) * 3);
         display: flex;
+        gap: var(--key-size);
         align-items: center;
     }
     &-aside {
